quant_engine/exdiv_check.txt
  File "<string>", line 17
    print(f'    {r[" detected_date\]}
                   ^
SyntaxError: unterminated string literal (detected at line 17)
